# ImpactSearcher

./: .gitignore  .travis.yml  CMakeCache.txt  LICENSE  Makefile  README.md  cmake_install.cmake
src/: CMakeLists.txt  a.out  definitions.h  filesystem.cpp  filesystem.h  image_bmp.cpp  image_bmp.h  image_helper.cpp  image_helper.h  image_png.cpp  image_png.h  libimse.h  main.cpp  main_console_wrapper.cpp  math_helpers.cpp  math_helpers.h  model_jupiter.cpp  model_jupiter.h  test.cpp  thread_1_IO.cpp  thread_2_center.cpp  thread_3_average.cpp  thread_4_presort.cpp  thread_5_check.cpp
